@@ -1,17 +1,26 @@
 package org.sopt.makers.internal.community.service.post;
 
 import com.fasterxml.jackson.databind.JsonNode;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
+import org.sopt.makers.internal.community.domain.category.Category;
+import org.sopt.makers.internal.community.dto.request.MentionRequest;
 import org.sopt.makers.internal.community.dto.response.PopularPostResponse;
-import org.sopt.makers.internal.community.dto.response.QuestionPostResponse;
+import org.sopt.makers.internal.community.dto.response.RecentPostResponse;
 import org.sopt.makers.internal.community.dto.response.SopticlePostResponse;
 import org.sopt.makers.internal.community.repository.post.CommunityPostLikeRepository;
 import org.sopt.makers.internal.community.repository.post.CommunityPostRepository;
 import org.sopt.makers.internal.community.repository.post.DeletedCommunityPostRepository;
 import org.sopt.makers.internal.community.service.SopticleScrapedService;
 import org.sopt.makers.internal.exception.BusinessLogicException;
+import org.sopt.makers.internal.external.pushNotification.PushNotificationService;
+import org.sopt.makers.internal.internal.dto.InternalPopularPostResponse;
+import org.sopt.makers.internal.internal.dto.InternalLatestPostResponse;
 import org.sopt.makers.internal.member.domain.MakersMemberId;
 import org.sopt.makers.internal.external.slack.SlackMessageUtil;
 import org.sopt.makers.internal.community.dto.request.PostSaveRequest;
@@ -35,8 +44,11 @@ import org.sopt.makers.internal.exception.ClientBadRequestException;
 import org.sopt.makers.internal.external.slack.SlackClient;
 import org.sopt.makers.internal.community.mapper.CommunityMapper;
 import org.sopt.makers.internal.community.mapper.CommunityResponseMapper;
+import org.sopt.makers.internal.member.domain.MemberSoptActivity;
 import org.sopt.makers.internal.member.service.MemberRetriever;
 import org.sopt.makers.internal.member.repository.MemberBlockRepository;
+import org.sopt.makers.internal.vote.dto.response.VoteResponse;
+import org.sopt.makers.internal.vote.service.VoteService;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -49,7 +61,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -58,6 +70,8 @@ public class CommunityPostService {
 
     private final AnonymousPostProfileService anonymousPostProfileService;
     private final SopticleScrapedService sopticleScrapedService;
+    private final VoteService voteService;
+    private final PushNotificationService pushNotificationService;
 
     private final CommunityPostModifier communityPostModifier;
 
@@ -86,15 +100,20 @@ public class CommunityPostService {
 
     private final ZoneId KST = ZoneId.of("Asia/Seoul");
     private static final int MIN_POINTS_FOR_HOT_POST = 10;
+    private static final long SOPTICLE_CATEGORY_ID = 21;
 
     @Transactional(readOnly = true)
     public List<CommunityPostMemberVo> getAllPosts(Long categoryId, Boolean isBlockedOn, Long memberId, Integer limit, Long cursor) {
         if (limit == null || limit >= 50) limit = 50;
 
         categoryRetriever.checkExistsCategoryById(categoryId);
-        val posts = communityQueryRepository.findAllParentCategoryPostByCursor(categoryId, limit, cursor, memberId, isBlockedOn);
+        List<CategoryPostMemberDao> posts = communityQueryRepository.findAllParentCategoryPostByCursor(categoryId, limit, cursor, memberId, isBlockedOn);
 
-        return posts.stream().map(communityResponseMapper::toCommunityVo).collect(Collectors.toList());
+        return posts.stream()
+                .map(postDao -> {
+                    VoteResponse voteResponse = voteService.getVoteByPostId(postDao.post().getId(), memberId);
+                    return communityResponseMapper.toCommunityVo(postDao, voteResponse);
+                }).toList();
     }
 
     @Transactional(readOnly = true)
@@ -109,7 +128,9 @@ public class CommunityPostService {
             memberRetriever.checkBlockedMember(blocker, blockedMember);
         }
 
-        return communityResponseMapper.toCommunityVo(postDao);
+        VoteResponse voteResponse = voteService.getVoteByPostId(postId, memberId);
+
+        return communityResponseMapper.toCommunityVo(postDao, voteResponse);
     }
 
     @Transactional
@@ -117,10 +138,25 @@ public class CommunityPostService {
         Member member = memberRetriever.findMemberById(writerId);
         CommunityPost post = createCommunityPostBasedOnCategory(member, request);
 
+        if(Objects.nonNull(request.vote())) {
+            voteService.createVote(post, request.vote());
+        }
+        if(Objects.nonNull(request.mention())) {
+            sendMentionPushNotification(post.getTitle(), request.isBlindWriter(), request.mention());
+        }
+
         handleBlindWriter(request, member, post);
         sendSlackNotificationForNonMakers(member, post);
 
         return communityResponseMapper.toPostSaveResponse(post);
+    }
+
+    private void sendMentionPushNotification(String postTitle, boolean isBlindWriter, MentionRequest mentionRequest) {
+        String title = "✏️게시글에서 회원님이 언급됐어요.";
+        String writerName = isBlindWriter ? "익명" : mentionRequest.writerName();
+        String content = "[" + writerName + "의 글] : \"" + postTitle + "\"";
+
+        pushNotificationService.sendPushNotification(title, content, mentionRequest.userIds(), mentionRequest.webLink());
     }
 
     @Transactional
@@ -140,6 +176,11 @@ public class CommunityPostService {
         }
 
         communityPostRepository.save(post);
+
+        if(Objects.nonNull(request.mention())) {
+            sendMentionPushNotification(post.getTitle(), request.isBlindWriter(), request.mention());
+        }
+
         return communityResponseMapper.toPostUpdateResponse(post);
     }
 
@@ -241,11 +282,7 @@ public class CommunityPostService {
 
     @Transactional(readOnly = true)
     public List<PopularPostResponse> getPopularPosts(int limitCount) {
-        List<CommunityPost> posts = communityQueryRepository.findPopularPosts(limitCount);
-
-        if (posts.isEmpty()) {
-            throw new BusinessLogicException("최근 한 달 내에 작성된 게시물이 없습니다.");
-        }
+        List<CommunityPost> posts = getPopularPostsBase(limitCount);
 
         Map<Long, String> categoryNameMap = getCategoryNameMap(posts);
         Map<Long, AnonymousPostProfile> anonymousProfileMap = getAnonymousProfileMap(posts);
@@ -257,6 +294,35 @@ public class CommunityPostService {
                         categoryNameMap.get(post.getCategoryId())
                 ))
                 .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<InternalPopularPostResponse> getPopularPostsForInternal(int limitCount) {
+        List<CommunityPost> posts = getPopularPostsBase(limitCount);
+
+        Map<Long, String> categoryNameMap = getCategoryNameMap(posts);
+        Map<Long, AnonymousPostProfile> anonymousProfileMap = getAnonymousProfileMap(posts);
+
+        return IntStream.range(0, posts.size())
+                .mapToObj(idx -> {
+                    CommunityPost post = posts.get(idx);
+                    return communityResponseMapper.toInternalPopularPostResponse(
+                            post,
+                            anonymousProfileMap.get(post.getId()),
+                            categoryNameMap.get(post.getCategoryId()),
+                            idx + 1
+                    );
+                })
+                .toList();
+    }
+
+    private List<CommunityPost> getPopularPostsBase(int limitCount) {
+        List<CommunityPost> posts = communityQueryRepository.findPopularPosts(limitCount);
+
+        if (posts.isEmpty()) {
+            throw new BusinessLogicException("최근 한 달 내에 작성된 게시물이 없습니다.");
+        }
+        return posts;
     }
 
     @Transactional(readOnly = true)
@@ -277,7 +343,6 @@ public class CommunityPostService {
 
     @Transactional(readOnly = true)
     public List<SopticlePostResponse> getRecentSopticlePosts() {
-        Long SOPTICLE_CATEGORY_ID = 21L;
         List<CommunityPost> posts = communityPostRepository.findTop5ByCategoryIdOrderByCreatedAtDesc(SOPTICLE_CATEGORY_ID);
         return posts.stream()
                 .map(communityResponseMapper::toSopticlePostResponse)
@@ -285,16 +350,65 @@ public class CommunityPostService {
     }
 
     @Transactional(readOnly = true)
-    public List<QuestionPostResponse> getRecentQuestionPosts() {
-        Long QUESTION_CATEGORY_ID = 22L;
-        List<CommunityPost> posts = communityPostRepository.findTop5ByCategoryIdOrderByCreatedAtDesc(QUESTION_CATEGORY_ID);
+    public List<RecentPostResponse> getRecentPosts(Long memberId) {
+        List<CommunityPost> posts = communityPostRepository.findTop5ByCategoryIdNotOrderByCreatedAtDesc(SOPTICLE_CATEGORY_ID);
+
+        Map<Long, Category> categoryMap = getCategoryMap(posts); //n+1 문제 방지를 위해 미리 카테고리 조회
+
         return posts.stream()
                 .map(post -> {
                     int likeCount = communityPostLikeRepository.countAllByPostId(post.getId());
                     int commentCount = communityCommentRepository.countAllByPostId(post.getId());
-                    return communityResponseMapper.toQuestionPostResponse(post, likeCount, commentCount);
+                    VoteResponse vote = voteService.getVoteByPostId(post.getId(), memberId);
+                    Integer totalVoteCount = Objects.nonNull(vote) ? vote.totalParticipants() : null;
+                    Category category = categoryMap.get(post.getCategoryId());
+
+                    Long categoryId = null;
+                    String categoryName = "";
+
+                    if (Objects.nonNull(category)) {
+                        categoryName = (category.getParent() != null) ? category.getParent().getName() : category.getName();
+                        categoryId = (category.getParent() != null) ? category.getParent().getId() : category.getId();
+                    }
+
+                    return communityResponseMapper.toRecentPostResponse(
+                            post, likeCount, commentCount, categoryId, categoryName, totalVoteCount
+                    );
                 })
                 .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<InternalLatestPostResponse> getInternalLatestPosts() {
+        final List<Long> topLevelCategoryIds = List.of(1L, 22L, 4L, 2L, 21L);
+
+        Map<Long, String> categoryNameMap = categoryRetriever.findAllByIds(topLevelCategoryIds).stream()
+                .collect(Collectors.toMap(Category::getId, Category::getName));
+
+        List<InternalLatestPostResponse> responses = new ArrayList<>();
+
+        for (Long categoryId : topLevelCategoryIds) {
+            List<Long> allCategoryIds = categoryRetriever.findAllDescendantIds(categoryId);
+
+            Optional<CommunityPost> postOptional = communityPostRepository.findFirstByCategoryIdInOrderByCreatedAtDesc(allCategoryIds);
+
+            postOptional.ifPresent(post -> {
+                Member member = post.getMember();
+                MemberSoptActivity latestActivity = member.getActivities().stream()
+                        .max(Comparator.comparing(MemberSoptActivity::getGeneration))
+                        .orElse(null);
+
+                String categoryName = categoryNameMap.getOrDefault(categoryId, "");
+
+                Optional<AnonymousPostProfile> anonymousProfile = Optional.empty();
+                if (post.getIsBlindWriter()) {
+                    anonymousProfile = anonymousPostProfileRepository.findAnonymousPostProfileByCommunityPostId(post.getId());
+                }
+
+                responses.add(InternalLatestPostResponse.of(post, latestActivity, categoryName, anonymousProfile));
+            });
+        }
+        return responses;
     }
 
     private PostWithPoints createPostWithPoints(CommunityPost post) {
@@ -403,5 +517,19 @@ public class CommunityPostService {
                 .distinct()
                 .toList();
         return communityQueryRepository.getAnonymousPostProfilesByPostId(postIds);
+    }
+
+    private Map<Long, Category> getCategoryMap(List<CommunityPost> posts) {
+        List<Long> categoryIds = posts.stream()
+                .map(CommunityPost::getCategoryId)
+                .distinct()
+                .toList();
+
+        if (categoryIds.isEmpty()) {
+            return Collections.emptyMap();
+        }
+
+        return categoryRetriever.findAllByIds(categoryIds).stream()
+                .collect(Collectors.toMap(Category::getId, category -> category));
     }
 }
